* Make Form#request pass the "submit" option to Form#serialize. [#66 state:resolved] [Ben Sommerville, jddalton, jodosha]

* Make $F return null for unknown/unsupported elements. Closes #8381. [Christophe Porteneuve, jddalton, Michael Stillwell]

* Make Form.Element#clear uncheck checkboxes/radio buttons, clear text inputs, deselect dropdown lists options, and skip button elements. [jddalton]

* Extend BUTTON elements with Form.Element.Methods. Closes #9708. [jddalton, mensler]

* unit test: Cleaned up testFormActivating unit test. [jddalton]

* Ensure Form#focusFirstElement skips Form.Element#activate if there is no first element. [Alexander Chernin, kangax]

* Rename confusing variables in Form.Element.Serializers.select(). [#180 state:resolved] [jddalton]

* Rewrite document.viewport methods getDimensions, getWidth, and getHeight to avoid browser sniffs, increase speed, and fix Opera 9.5 support. [#337 state:resolved] [jddalton, Nick Stakenburg]

* Fix Element#clonePosition issues with element margins, borders, and padding. Closes #11613. [azazel, jddalton, Nick Stakenburg]

* Minor clean-up to Element#cumulativeOffset and Element#positionedOffset. [jddalton]

* Fix Element#cumulativeScrollOffset for Opera 9.25/9.5. Closes #10486. [jddalton, Nick Stakenburg]

* Make Element#cumulativeScrollOffset stop calculating scroll position after a "fixed" positioned element. Closes #10869. [jddalton, kangax, watersco]

* Use Element#cumulativeScrollOffset in Element#viewportOffset to reduce code duplication. [jddalton]

* Make Element#absolutize account for margins, padding, and borders. Closes #8024, #9918. [chiefcll, jddalton, pphilipp, Nick Stakenburg]

* Make Element#relativize throw an error if Element#absolutize wasn't previously called. [Andrew Dupont, jddalton]

* Remove overly complex position code from Element#relativize and Element#absolutize. [jddalton]

* Make Element.extend() skip XML nodes to avoid errors in IE. Closes #9709. [jddalton, yanick.rochon]
