@@ -5,23 +5,50 @@ var Form = {
   },
   
   serializeElements: function(elements, options) {
-    if (typeof options != 'object') options = { hash: !!options };
+    if (typeof options !== 'object') options = { hash: !!options };
     else if (Object.isUndefined(options.hash)) options.hash = true;
-    var key, value, submitted = false, submit = options.submit;
+    
+    var key, value, type, isImageType, isSubmitButton,
+     submitSerialized, submit = options.submit;
     
     var data = elements.inject({ }, function(result, element) {
-      if (!element.disabled && element.name) {
-        key = element.name; value = $(element).getValue();
-        if (value != null && (element.type != 'submit' || (!submitted &&
-            submit !== false && (!submit || key == submit) && (submitted = true)))) { 
-          if (key in result) {
-            // a key is already present; construct an array of values
-            if (!Object.isArray(result[key])) result[key] = [result[key]];
-            result[key].push(value);
-          }
-          else result[key] = value;
+      element = $(element);
+      key     = element.name;
+      value   = element.getValue();
+      type    = element.type;
+      
+      isImageType = type === 'image';
+      isSubmitButton = type === 'submit' || isImageType;
+      
+      // null/undefined values don't get serialized
+      if (value == null) return result;
+      // disabled elements don't get serialized
+      if (element.disabled) return result;
+      // <input type="file|reset" /> don't get serialized
+      if (type === 'file' || type === 'reset') return result;
+      // non-active submit buttons don't get serialized
+      if (isSubmitButton &&
+       (submit === false || submitSerialized ||
+       (submit && !(key === submit || element === submit))))
+        return result;
+      
+      if (isSubmitButton) {
+        submitSerialized = true;
+        if (isImageType) {
+          var prefix = key ? key + '.' : '',
+           x = options.x || 0, y = options.y || 0;
+          result[prefix + 'x'] = x;
+          result[prefix + 'y'] = y;
         }
       }
+      if (!key) return result;
+      
+      if (key in result) {
+        // a key is already present; construct an array of values
+        if (!Object.isArray(result[key])) result[key] = [result[key]];
+        result[key].push(value);
+      } else result[key] = value;
+      
       return result;
     });
     
@@ -133,7 +160,7 @@ Form.Element.Methods = {
     element = $(element);
     if (!element.disabled && element.name) {
       var value = element.getValue();
-      if (value != undefined) {
+      if (value != null) {
         var pair = { };
         pair[element.name] = value;
         return Object.toQueryString(pair);
