@@ -95,11 +95,24 @@
   </div>
 </form>
 
+<form id="form_with_control_groups">
+  <input type="radio" name="group_radio" value="1r" />
+  <input type="radio" name="group_radio" value="2r" checked />
+  <input type="radio" name="group_radio" value="3r" />
+  <input type="checkbox" name="group_checkbox" value="1c" />
+  <input type="checkbox" name="group_checkbox" value="2c" checked />
+  <input type="checkbox" name="group_checkbox" value="3c" />
+</form>
+
 <form id="form_focus_hidden" style="display: none">
   <input type="text" />
 </form>
 
 <form id="form_empty">
+</form>
+
+<form id="form_with_file_input">
+  <input type="file" name="file_name" value="foo" />
 </form>
 
 <!-- tabindexed forms -->
